fix popup z-index

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -366,3 +366,7 @@
     background-color: #121212 !important;
   }
 }
+
+.mapboxgl-popup {
+  z-index: 20 !important;
+}
